# eusei

./: .env.example  .gitignore  .zenodo.json  AGENTS.md  CITATION.cff  CLAUDE.md  Cargo.toml  PLAN.md  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
Formula/: eusei.rb
deploy/: 01-prereqs-sudo.sh  02-deploy-sudo.sh  03-rotate-secrets-sudo.sh  04-update-sudo.sh  eusei.nginx.conf  eusei.service
deploy/debian/: eusei.service  postinst  postrm  prerm
src/: app.rs  auth.rs  cache.rs  config.rs  docs.rs  error.rs  main.rs  state.rs
src/routes/: mod.rs
src/sei/: andamentos.rs  consultas.rs  listas.rs  mod.rs  sip.rs
src/soap/: client.rs  envelope.rs  mod.rs  parse.rs
static/: docs.html  index.html  openapi.json  tailwind.css  tw-input.css
tests/: smoke.sh
tests/fixtures/: consultarDocumento.xml  consultarProcedimento.xml
