[package]
name = "eusei"
version = "0.1.0"
edition = "2021"
description = "API HTTP/JSON para os Web Services SOAP do SEI (espelha o pacote R rsei)"
license = "GPL-3.0-or-later"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
thiserror = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
roxmltree = "0.20"
futures = "0.3"

[profile.release]
strip = true
lto = true
codegen-units = 1
