[package]
name = "eusei"
version = "0.2.0"
edition = "2021"
description = "API HTTP/JSON para os Web Services SOAP do SEI (espelha o pacote R rsei)"
license = "GPL-3.0-or-later"
repository = "https://github.com/StrategicProjects/eusei"
homepage = "https://github.com/StrategicProjects/eusei"
readme = "README.md"
authors = ["André Leite <leite@castlab.org>"]

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tower-http = { version = "0.7", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
thiserror = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
roxmltree = "0.21"
futures = "0.3"
sha2 = "0.10"
subtle = "2.6"

[profile.release]
strip = true
lto = true
codegen-units = 1

# ---- empacotamento .deb (cargo-deb) ----
[package.metadata.deb]
maintainer = "André Leite <leite@castlab.org>"
copyright = "2026, Strategic Projects — GPL-3.0-or-later"
license-file = ["LICENSE", "0"]
section = "net"
priority = "optional"
depends = "$auto"
extended-description = """\
API HTTP/JSON read-only sobre os Web Services SOAP do SEI. Expõe consultas de \
processos, documentos, andamentos e listas em JSON, com autenticação por Bearer \
token. Configurável por /etc/eusei.env; serve a si própria (landing + docs) sem \
dependências externas."""
assets = [
    ["target/release/eusei", "usr/bin/", "755"],
    ["deploy/debian/eusei.service", "lib/systemd/system/eusei.service", "644"],
    ["deploy/eusei.nginx.conf", "usr/share/eusei/eusei.nginx.conf", "644"],
    [".env.example", "usr/share/eusei/eusei.env.example", "644"],
    ["README.md", "usr/share/doc/eusei/README.md", "644"],
]
maintainer-scripts = "deploy/debian"
